inshalla/inshalla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    site: inshalla
  name: inshalla-deployment
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      site: inshalla
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        site: inshalla
    spec:
      containers:
      - image: c8n.io/robotarmy/inshalla-site:0.1.1
        imagePullPolicy: IfNotPresent
        name: inshalla-site
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 8Mi
          requests:
            cpu: 200m
            memory: 4Mi
      imagePullSecrets:
      - name: c8n-robotarmy
      restartPolicy: Always
