inshalla/inshalla-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    site: inshalla
  name: inshalla-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: inshalla
status:
  loadBalancer: {}
