inshalla/inshalla-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels: 
    site: inshalla
  name: inshalla-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: inshal.la
    http:
      paths:
      - backend:
          service:
            name: inshalla-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - inshal.la
    secretName: tls-la-inshal
